<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <include
            android:id="@+id/nested_bar"
            layout="@layout/bar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/nested_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/login_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="16dp"

            app:endIconMode="password_toggle"

            app:layout_constraintTop_toBottomOf="@id/username_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeated_password_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="16dp"

            app:endIconMode="password_toggle"

            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeated_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeated_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        
        
        <TextView
            android:id="@+id/gender_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/repeated_password_field"
            android:text="@string/gender"
            android:textSize="30sp"
            />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_title">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_gender"
                android:textColor="@color/black" />
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:width="30dp"
            android:height="60dp"
            android:backgroundTint="@color/blue"


            android:fontFamily="sans-serif"
            android:text="@string/start_registration"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"

            app:layout_constraintTop_toBottomOf="@id/gender_group"
            tools:layout_editor_absoluteX="50dp" />

        <TextView
            android:id="@+id/agreement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/agreement"
            android:textSize="11sp"
            android:textAlignment="center"
            android:autoLink="all"
            android:linksClickable="true"

            app:layout_constraintTop_toBottomOf="@+id/registration_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>