<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="15dp">

    <Button
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/transparent"
        android:textColor="@color/black"
        android:text="@string/profile" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:background="@color/transparent"

        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:text="@string/save" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="profile_title, save_button"
        app:barrierDirection="bottom" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/login_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        app:layout_constraintLeft_toLeftOf="parent"

        android:background="@color/transparent"
        android:layout_margin="15dp"

        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:text="@string/change_password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"


        android:text="@string/exit"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/red"
        app:cornerRadius="5dp"

        style="@style/Widget.MaterialComponents.Button.TextButton" />

</androidx.constraintlayout.widget.ConstraintLayout>