<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:contentDescription="@string/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/welcome_screen_image"
        android:scaleType="fitCenter"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toTopOf="@id/for_image_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/for_image_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41"/>


    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/text_guideline"
        android:layout_marginBottom="7dp"
        android:text="@string/main_text_for_welcome"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_guideline"
        android:layout_marginTop="7dp"
        android:text="@string/side_text_for_welcome"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:fontFamily="sans-serif"
        android:textAlignment="center" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="30dp"
        android:height="60dp"
        app:layout_constraintBottom_toTopOf="@id/button_guideline"

        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:cornerRadius="5dp"


        android:text="@string/start_registration"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"

        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_guideline"

        android:text="@string/have_account"
        android:textColor="@color/purple"
        android:textSize="11sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"

        style="@style/Widget.MaterialComponents.Button.TextButton"
        />







</androidx.constraintlayout.widget.ConstraintLayout>