<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/nested_bar"
        layout="@layout/bar" />


    <ImageView
        android:id="@+id/main_image"
        android:contentDescription="@string/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/welcome_screen_image"
        android:scaleType="fitCenter"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/nested_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@id/main_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"

        app:endIconMode="password_toggle"

        app:layout_constraintTop_toBottomOf="@id/login_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="60dp"
        app:layout_constraintTop_toBottomOf="@id/password_field"

        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:cornerRadius="5dp"


        android:text="@string/start_login"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"

        style="@style/Widget.MaterialComponents.Button.TextButton"
        />








</androidx.constraintlayout.widget.ConstraintLayout>