<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="15dp">

    <include
        android:id="@+id/nested_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/bar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/nested_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/old_password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeated_password_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/old_password_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeated_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeated_password_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saving_new_password_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/repeated_password_field"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="30dp"


        android:text="@string/accept"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/blue"
        app:cornerRadius="5dp"

        style="@style/Widget.MaterialComponents.Button.TextButton" />

</androidx.constraintlayout.widget.ConstraintLayout>